scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -201,7 +201,7 @@ textarea {
 }
 
 ::-webkit-scrollbar {
-  width: 120px;
+  width: 5px;
 }
 
 ::-webkit-scrollbar-track {
